--- a/salary/SalaryAnalysis.ipynb
+++ b/salary/SalaryAnalysis.ipynb
@@ -25,12 +25,9 @@
       "\n",
       "    package                    |            build\n",
       "    ---------------------------|-----------------\n",
-      "    ca-certificates-2021.10.8  |       ha878542_0         139 KB  conda-forge\n",
-      "    certifi-2021.10.8          |   py39hf3d152e_0         144 KB  conda-forge\n",
-      "    openssl-1.1.1l             |       h7f98852_0         2.1 MB  conda-forge\n",
-      "    pandasql-0.7.3             |     pyhd8ed1ab_0          26 KB  conda-forge\n",
+      "    certifi-2021.10.8          |   py39hf3d152e_1         145 KB  conda-forge\n",
       "    ------------------------------------------------------------\n",
-      "                                           Total:         2.4 MB\n",
+      "                                           Total:         145 KB\n",
       "\n",
       "The following NEW packages will be INSTALLED:\n",
       "\n",
@@ -39,16 +36,13 @@
       "The following packages will be UPDATED:\n",
       "\n",
       "  ca-certificates                      2021.5.30-ha878542_0 --> 2021.10.8-ha878542_0\n",
-      "  certifi                          2021.5.30-py39hf3d152e_0 --> 2021.10.8-py39hf3d152e_0\n",
+      "  certifi                          2021.5.30-py39hf3d152e_0 --> 2021.10.8-py39hf3d152e_1\n",
       "  openssl                                 1.1.1k-h7f98852_1 --> 1.1.1l-h7f98852_0\n",
       "\n",
       "\n",
       "\n",
       "Downloading and Extracting Packages\n",
-      "ca-certificates-2021 | 139 KB    | ##################################### | 100% \n",
-      "pandasql-0.7.3       | 26 KB     | ##################################### | 100% \n",
-      "certifi-2021.10.8    | 144 KB    | ##################################### | 100% \n",
-      "openssl-1.1.1l       | 2.1 MB    | ##################################### | 100% \n",
+      "certifi-2021.10.8    | 145 KB    | ##################################### | 100% \n",
       "Preparing transaction: done\n",
       "Verifying transaction: done\n",
       "Executing transaction: done\n"
@@ -62,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "f8db7187-00d7-474a-8601-7ca7b7640228",
    "metadata": {},
    "outputs": [],
@@ -89,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 35,
    "id": "3eae012d-7696-4b97-ada6-f1318c9d7b45",
    "metadata": {},
    "outputs": [
@@ -106,143 +100,150 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead th {\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
+       "    <tr>\n",
        "      <th></th>\n",
-       "      <th>playerID</th>\n",
-       "      <th>yearID</th>\n",
-       "      <th>salary</th>\n",
-       "      <th>POS</th>\n",
-       "      <th>G</th>\n",
-       "      <th>BattingAverage</th>\n",
+       "      <th></th>\n",
        "      <th>AB</th>\n",
-       "      <th>R</th>\n",
        "      <th>H</th>\n",
        "      <th>HR</th>\n",
        "      <th>RBI</th>\n",
-       "      <th>FieldingPercentage</th>\n",
+       "      <th>BB</th>\n",
+       "      <th>SF</th>\n",
        "      <th>A</th>\n",
        "      <th>E</th>\n",
        "      <th>PO</th>\n",
+       "      <th>salary</th>\n",
+       "      <th>FieldingPercentage</th>\n",
+       "      <th>BattingAverage</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>first</th>\n",
+       "      <th>first</th>\n",
+       "      <th>first</th>\n",
+       "      <th>first</th>\n",
+       "      <th>first</th>\n",
+       "      <th>first</th>\n",
+       "      <th>sum</th>\n",
+       "      <th>sum</th>\n",
+       "      <th>sum</th>\n",
+       "      <th>first</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>playerID</th>\n",
+       "      <th>yearID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>aguaylu01</td>\n",
-       "      <td>1985</td>\n",
-       "      <td>237000</td>\n",
-       "      <td>2B</td>\n",
-       "      <td>91</td>\n",
-       "      <td>0.127273</td>\n",
+       "      <th rowspan=\"4\" valign=\"top\">aguaylu01</th>\n",
+       "      <th>1985</th>\n",
        "      <td>165</td>\n",
-       "      <td>27</td>\n",
        "      <td>46</td>\n",
        "      <td>6</td>\n",
        "      <td>21.0</td>\n",
-       "      <td>0.981132</td>\n",
-       "      <td>25</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>27</td>\n",
+       "      <td>22</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>158</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>92</td>\n",
+       "      <td>237000</td>\n",
+       "      <td>0.965251</td>\n",
+       "      <td>0.328571</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>aguaylu01</td>\n",
-       "      <td>1985</td>\n",
-       "      <td>237000</td>\n",
-       "      <td>3B</td>\n",
-       "      <td>91</td>\n",
-       "      <td>0.127273</td>\n",
-       "      <td>165</td>\n",
-       "      <td>27</td>\n",
-       "      <td>46</td>\n",
-       "      <td>6</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>16</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>1986</th>\n",
+       "      <td>133</td>\n",
+       "      <td>28</td>\n",
        "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>aguaylu01</td>\n",
-       "      <td>1985</td>\n",
-       "      <td>237000</td>\n",
-       "      <td>SS</td>\n",
-       "      <td>91</td>\n",
-       "      <td>0.127273</td>\n",
-       "      <td>165</td>\n",
-       "      <td>27</td>\n",
-       "      <td>46</td>\n",
-       "      <td>6</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>0.956989</td>\n",
-       "      <td>117</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>61</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>almonbi01</td>\n",
-       "      <td>1985</td>\n",
-       "      <td>255000</td>\n",
-       "      <td>1B</td>\n",
-       "      <td>88</td>\n",
-       "      <td>0.168033</td>\n",
-       "      <td>244</td>\n",
-       "      <td>33</td>\n",
-       "      <td>66</td>\n",
-       "      <td>6</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>0.928571</td>\n",
-       "      <td>1</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>8</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>25</td>\n",
+       "      <td>90</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>57</td>\n",
+       "      <td>275000</td>\n",
+       "      <td>0.967105</td>\n",
+       "      <td>0.227642</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>almonbi01</td>\n",
-       "      <td>1985</td>\n",
-       "      <td>255000</td>\n",
-       "      <td>3B</td>\n",
-       "      <td>88</td>\n",
-       "      <td>0.168033</td>\n",
-       "      <td>244</td>\n",
-       "      <td>33</td>\n",
-       "      <td>66</td>\n",
-       "      <td>6</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>0.857143</td>\n",
-       "      <td>4</td>\n",
+       "      <th>1987</th>\n",
+       "      <td>209</td>\n",
+       "      <td>43</td>\n",
+       "      <td>12</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>172</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>86</td>\n",
+       "      <td>325000</td>\n",
+       "      <td>0.973585</td>\n",
+       "      <td>0.223958</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1988</th>\n",
+       "      <td>140</td>\n",
+       "      <td>35</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>7</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>156</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>83</td>\n",
+       "      <td>375000</td>\n",
+       "      <td>0.948413</td>\n",
+       "      <td>0.265152</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    playerID  yearID  salary POS   G  BattingAverage   AB   R   H  HR   RBI  \\\n",
-       "0  aguaylu01    1985  237000  2B  91        0.127273  165  27  46   6  21.0   \n",
-       "1  aguaylu01    1985  237000  3B  91        0.127273  165  27  46   6  21.0   \n",
-       "2  aguaylu01    1985  237000  SS  91        0.127273  165  27  46   6  21.0   \n",
-       "3  almonbi01    1985  255000  1B  88        0.168033  244  33  66   6  29.0   \n",
-       "4  almonbi01    1985  255000  3B  88        0.168033  244  33  66   6  29.0   \n",
+       "                    AB     H    HR   RBI    BB    SF    A     E  PO  salary  \\\n",
+       "                 first first first first first first  sum   sum sum   first   \n",
+       "playerID  yearID                                                              \n",
+       "aguaylu01 1985     165    46     6  21.0    22   3.0  158   9.0  92  237000   \n",
+       "          1986     133    28     4  13.0     8   2.0   90   5.0  57  275000   \n",
+       "          1987     209    43    12  21.0    15   2.0  172   7.0  86  325000   \n",
+       "          1988     140    35     3   8.0     7   1.0  156  13.0  83  375000   \n",
        "\n",
-       "   FieldingPercentage    A    E  PO  \n",
-       "0            0.981132   25  1.0  27  \n",
-       "1            1.000000   16  0.0   4  \n",
-       "2            0.956989  117  8.0  61  \n",
-       "3            0.928571    1  2.0  25  \n",
-       "4            0.857143    4  1.0   2  "
+       "                 FieldingPercentage BattingAverage  \n",
+       "                                                    \n",
+       "playerID  yearID                                    \n",
+       "aguaylu01 1985             0.965251       0.328571  \n",
+       "          1986             0.967105       0.227642  \n",
+       "          1987             0.973585       0.223958  \n",
+       "          1988             0.948413       0.265152  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +253,7 @@
     "df_playerids.head(5)\n",
     "\n",
     "batting_stats = pysqldf(\"\"\"\n",
-    "    SELECT playerID, yearID, G, (H - BB - SF) / AB as BattingAverage, AB, R, H, HR, RBI, BB, SF \n",
+    "    SELECT playerID, yearID, G, H / (AB - BB - SF) as BattingAverage, AB, R, H, HR, RBI, BB, SF \n",
     "    FROM df_batting \n",
     "    WHERE G >= 50 and AB > 0 and yearID > 1955\n",
     "\"\"\")\n",
@@ -264,11 +265,28 @@
     "\"\"\")\n",
     "\n",
     "fielders = pysqldf(\"\"\"\n",
-    "    SELECT ps.playerID, ps.yearID, salary, POS, ps.G, BattingAverage, AB, R, H, HR, RBI, (PO + A) / (PO + A + E) as FieldingPercentage, A, E, PO\n",
+    "    SELECT DISTINCT ps.playerID, ps.yearID, salary, POS, ps.G, BattingAverage, AB, R, H, HR, RBI, BB, SF, (PO + A) / (PO + A + E) as FieldingPercentage, A, E, PO\n",
     "    FROM player_salaries AS ps\n",
     "    INNER JOIN df_fielding ON ps.playerID=df_fielding.playerID AND ps.yearID=df_fielding.yearID \n",
     "\"\"\")\n",
-    "fielders.head(5)"
+    "\n",
+    "# fielders.head(5)\n",
+    "\n",
+    "updated = fielders.groupby(['playerID', 'yearID']).agg({\n",
+    "    'AB': ['first'],\n",
+    "    'H': ['first'],\n",
+    "    'HR': ['first'],\n",
+    "    'RBI': ['first'],\n",
+    "    'BB': ['first'],\n",
+    "    'SF': ['first'],\n",
+    "    'A': ['sum'],\n",
+    "    'E': ['sum'],\n",
+    "    'PO': ['sum'],\n",
+    "    'salary': ['first']\n",
+    "})\n",
+    "updated['FieldingPercentage'] = (updated['A'] + updated['PO']) / (updated['PO'] + updated['A'] + updated['E'])\n",
+    "updated['BattingAverage'] = updated['H'] / (updated['AB'] - updated['BB'] - updated['SF'])\n",
+    "updated.query(\"playerID == 'aguaylu01'\")"
    ]
   }
  ],
