Added min/max salary

--- a/salary/SalaryAnalysis.ipynb
+++ b/salary/SalaryAnalysis.ipynb
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "id": "1a56328d-a2c1-49e5-a2c2-d35f1f5246b0",
    "metadata": {},
    "outputs": [
@@ -766,16 +766,16 @@
        "      <th>E</th>\n",
        "      <th>PO</th>\n",
        "      <th>...</th>\n",
-       "      <th>NextSalary</th>\n",
-       "      <th>Difference</th>\n",
-       "      <th>FieldingPercentage</th>\n",
-       "      <th>BattingAverage</th>\n",
-       "      <th>HR_Cat</th>\n",
-       "      <th>HR_Cat_Small</th>\n",
-       "      <th>RBI_Cat</th>\n",
        "      <th>RBI_Cat_Small</th>\n",
        "      <th>BA_Cat</th>\n",
        "      <th>BA_Cat_Small</th>\n",
+       "      <th>FP_Cat</th>\n",
+       "      <th>FP_Cat_Small</th>\n",
+       "      <th>Salary_Increase</th>\n",
+       "      <th>Salary_Increase_Small</th>\n",
+       "      <th>HighestSalary</th>\n",
+       "      <th>MaxSalary</th>\n",
+       "      <th>LowestSalary</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>playerID</th>\n",
@@ -818,16 +818,16 @@
        "      <td>4.0</td>\n",
        "      <td>132</td>\n",
        "      <td>...</td>\n",
-       "      <td>255000</td>\n",
-       "      <td>0.457143</td>\n",
-       "      <td>0.970588</td>\n",
-       "      <td>0.295652</td>\n",
-       "      <td>Good</td>\n",
-       "      <td>Good</td>\n",
-       "      <td>Fair</td>\n",
        "      <td>Poor</td>\n",
        "      <td>Fair</td>\n",
        "      <td>Good</td>\n",
+       "      <td>Fair</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>Small</td>\n",
+       "      <td>255000</td>\n",
+       "      <td>255000</td>\n",
+       "      <td>175000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000</th>\n",
@@ -842,16 +842,16 @@
        "      <td>2.0</td>\n",
        "      <td>101</td>\n",
        "      <td>...</td>\n",
-       "      <td>300000</td>\n",
-       "      <td>0.176471</td>\n",
-       "      <td>0.980952</td>\n",
-       "      <td>0.305699</td>\n",
-       "      <td>Poor</td>\n",
-       "      <td>Poor</td>\n",
-       "      <td>Fair</td>\n",
        "      <td>Poor</td>\n",
        "      <td>Good</td>\n",
        "      <td>Excellent</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>Fair</td>\n",
+       "      <td>Small</td>\n",
+       "      <td>255000</td>\n",
+       "      <td>255000</td>\n",
+       "      <td>175000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">abbotku01</th>\n",
@@ -867,16 +867,16 @@
        "      <td>15.0</td>\n",
        "      <td>162</td>\n",
        "      <td>...</td>\n",
-       "      <td>119000</td>\n",
-       "      <td>0.091743</td>\n",
-       "      <td>0.965675</td>\n",
-       "      <td>0.262997</td>\n",
-       "      <td>Fair</td>\n",
-       "      <td>Poor</td>\n",
-       "      <td>Fair</td>\n",
        "      <td>Poor</td>\n",
        "      <td>Poor</td>\n",
        "      <td>Good</td>\n",
+       "      <td>Fair</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>Fair</td>\n",
+       "      <td>Small</td>\n",
+       "      <td>900000</td>\n",
+       "      <td>900000</td>\n",
+       "      <td>109000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1995</th>\n",
@@ -891,16 +891,16 @@
        "      <td>19.0</td>\n",
        "      <td>149</td>\n",
        "      <td>...</td>\n",
-       "      <td>250000</td>\n",
-       "      <td>1.100840</td>\n",
-       "      <td>0.958515</td>\n",
-       "      <td>0.282322</td>\n",
-       "      <td>Good</td>\n",
-       "      <td>Good</td>\n",
-       "      <td>Good</td>\n",
        "      <td>Good</td>\n",
        "      <td>Fair</td>\n",
        "      <td>Good</td>\n",
+       "      <td>Fair</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>Excellent</td>\n",
+       "      <td>Large</td>\n",
+       "      <td>900000</td>\n",
+       "      <td>900000</td>\n",
+       "      <td>109000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1996</th>\n",
@@ -915,20 +915,20 @@
        "      <td>12.0</td>\n",
        "      <td>123</td>\n",
        "      <td>...</td>\n",
-       "      <td>650000</td>\n",
-       "      <td>1.600000</td>\n",
-       "      <td>0.964706</td>\n",
-       "      <td>0.271812</td>\n",
-       "      <td>Fair</td>\n",
-       "      <td>Poor</td>\n",
-       "      <td>Fair</td>\n",
        "      <td>Poor</td>\n",
        "      <td>Fair</td>\n",
        "      <td>Good</td>\n",
+       "      <td>Fair</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>Excellent</td>\n",
+       "      <td>Large</td>\n",
+       "      <td>900000</td>\n",
+       "      <td>900000</td>\n",
+       "      <td>109000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
+       "<p>5 rows × 28 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -940,34 +940,34 @@
        "          1995    120  420  107  17  60.0  36  5.0  290  19.0  149  ...   \n",
        "          1996    109  320   81   8  33.0  22  0.0  205  12.0  123  ...   \n",
        "\n",
-       "                  NextSalary  Difference  FieldingPercentage  BattingAverage  \\\n",
-       "playerID  yearID                                                               \n",
-       "abbotje01 1998        255000    0.457143            0.970588        0.295652   \n",
-       "          2000        300000    0.176471            0.980952        0.305699   \n",
-       "abbotku01 1994        119000    0.091743            0.965675        0.262997   \n",
-       "          1995        250000    1.100840            0.958515        0.282322   \n",
-       "          1996        650000    1.600000            0.964706        0.271812   \n",
+       "                  RBI_Cat_Small  BA_Cat  BA_Cat_Small  FP_Cat  FP_Cat_Small  \\\n",
+       "playerID  yearID                                                              \n",
+       "abbotje01 1998             Poor    Fair          Good    Fair          Good   \n",
+       "          2000             Poor    Good     Excellent    Good          Good   \n",
+       "abbotku01 1994             Poor    Poor          Good    Fair          Good   \n",
+       "          1995             Good    Fair          Good    Fair          Good   \n",
+       "          1996             Poor    Fair          Good    Fair          Good   \n",
        "\n",
-       "                  HR_Cat HR_Cat_Small RBI_Cat RBI_Cat_Small BA_Cat  \\\n",
-       "playerID  yearID                                                     \n",
-       "abbotje01 1998      Good         Good    Fair          Poor   Fair   \n",
-       "          2000      Poor         Poor    Fair          Poor   Good   \n",
-       "abbotku01 1994      Fair         Poor    Fair          Poor   Poor   \n",
-       "          1995      Good         Good    Good          Good   Fair   \n",
-       "          1996      Fair         Poor    Fair          Poor   Fair   \n",
+       "                 Salary_Increase Salary_Increase_Small HighestSalary  \\\n",
+       "playerID  yearID                                                       \n",
+       "abbotje01 1998              Good                 Small        255000   \n",
+       "          2000              Fair                 Small        255000   \n",
+       "abbotku01 1994              Fair                 Small        900000   \n",
+       "          1995         Excellent                 Large        900000   \n",
+       "          1996         Excellent                 Large        900000   \n",
        "\n",
-       "                 BA_Cat_Small  \n",
-       "playerID  yearID               \n",
-       "abbotje01 1998           Good  \n",
-       "          2000      Excellent  \n",
-       "abbotku01 1994           Good  \n",
-       "          1995           Good  \n",
-       "          1996           Good  \n",
+       "                 MaxSalary LowestSalary  \n",
+       "playerID  yearID                         \n",
+       "abbotje01 1998      255000       175000  \n",
+       "          2000      255000       175000  \n",
+       "abbotku01 1994      900000       109000  \n",
+       "          1995      900000       109000  \n",
+       "          1996      900000       109000  \n",
        "\n",
-       "[5 rows x 21 columns]"
+       "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "id": "7845cd31-cd43-4157-84b1-793215611987",
    "metadata": {},
    "outputs": [
@@ -1345,9 +1345,6 @@
        "      <th>E</th>\n",
        "      <th>PO</th>\n",
        "      <th>...</th>\n",
-       "      <th>HR_Cat</th>\n",
-       "      <th>HR_Cat_Small</th>\n",
-       "      <th>RBI_Cat</th>\n",
        "      <th>RBI_Cat_Small</th>\n",
        "      <th>BA_Cat</th>\n",
        "      <th>BA_Cat_Small</th>\n",
@@ -1355,6 +1352,9 @@
        "      <th>FP_Cat_Small</th>\n",
        "      <th>Salary_Increase</th>\n",
        "      <th>Salary_Increase_Small</th>\n",
+       "      <th>HighestSalary</th>\n",
+       "      <th>MaxSalary</th>\n",
+       "      <th>LowestSalary</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>playerID</th>\n",
@@ -1397,9 +1397,6 @@
        "      <td>4.0</td>\n",
        "      <td>132</td>\n",
        "      <td>...</td>\n",
-       "      <td>Good</td>\n",
-       "      <td>Good</td>\n",
-       "      <td>Fair</td>\n",
        "      <td>Poor</td>\n",
        "      <td>Fair</td>\n",
        "      <td>Good</td>\n",
@@ -1407,6 +1404,9 @@
        "      <td>Good</td>\n",
        "      <td>Good</td>\n",
        "      <td>Small</td>\n",
+       "      <td>255000</td>\n",
+       "      <td>255000</td>\n",
+       "      <td>175000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000</th>\n",
@@ -1422,15 +1422,15 @@
        "      <td>101</td>\n",
        "      <td>...</td>\n",
        "      <td>Poor</td>\n",
-       "      <td>Poor</td>\n",
-       "      <td>Fair</td>\n",
-       "      <td>Poor</td>\n",
        "      <td>Good</td>\n",
        "      <td>Excellent</td>\n",
        "      <td>Good</td>\n",
        "      <td>Good</td>\n",
        "      <td>Fair</td>\n",
        "      <td>Small</td>\n",
+       "      <td>255000</td>\n",
+       "      <td>255000</td>\n",
+       "      <td>175000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">abbotku01</th>\n",
@@ -1446,9 +1446,6 @@
        "      <td>15.0</td>\n",
        "      <td>162</td>\n",
        "      <td>...</td>\n",
-       "      <td>Fair</td>\n",
-       "      <td>Poor</td>\n",
-       "      <td>Fair</td>\n",
        "      <td>Poor</td>\n",
        "      <td>Poor</td>\n",
        "      <td>Good</td>\n",
@@ -1456,6 +1453,9 @@
        "      <td>Good</td>\n",
        "      <td>Fair</td>\n",
        "      <td>Small</td>\n",
+       "      <td>900000</td>\n",
+       "      <td>900000</td>\n",
+       "      <td>109000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1995</th>\n",
@@ -1471,15 +1471,15 @@
        "      <td>149</td>\n",
        "      <td>...</td>\n",
        "      <td>Good</td>\n",
-       "      <td>Good</td>\n",
-       "      <td>Good</td>\n",
-       "      <td>Good</td>\n",
        "      <td>Fair</td>\n",
        "      <td>Good</td>\n",
        "      <td>Fair</td>\n",
        "      <td>Good</td>\n",
        "      <td>Excellent</td>\n",
        "      <td>Large</td>\n",
+       "      <td>900000</td>\n",
+       "      <td>900000</td>\n",
+       "      <td>109000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1996</th>\n",
@@ -1494,9 +1494,6 @@
        "      <td>12.0</td>\n",
        "      <td>123</td>\n",
        "      <td>...</td>\n",
-       "      <td>Fair</td>\n",
-       "      <td>Poor</td>\n",
-       "      <td>Fair</td>\n",
        "      <td>Poor</td>\n",
        "      <td>Fair</td>\n",
        "      <td>Good</td>\n",
@@ -1504,10 +1501,13 @@
        "      <td>Good</td>\n",
        "      <td>Excellent</td>\n",
        "      <td>Large</td>\n",
+       "      <td>900000</td>\n",
+       "      <td>900000</td>\n",
+       "      <td>109000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 25 columns</p>\n",
+       "<p>5 rows × 28 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1519,34 +1519,34 @@
        "          1995    120  420  107  17  60.0  36  5.0  290  19.0  149  ...   \n",
        "          1996    109  320   81   8  33.0  22  0.0  205  12.0  123  ...   \n",
        "\n",
-       "                  HR_Cat  HR_Cat_Small  RBI_Cat  RBI_Cat_Small  BA_Cat  \\\n",
-       "playerID  yearID                                                         \n",
-       "abbotje01 1998      Good          Good     Fair           Poor    Fair   \n",
-       "          2000      Poor          Poor     Fair           Poor    Good   \n",
-       "abbotku01 1994      Fair          Poor     Fair           Poor    Poor   \n",
-       "          1995      Good          Good     Good           Good    Fair   \n",
-       "          1996      Fair          Poor     Fair           Poor    Fair   \n",
+       "                  RBI_Cat_Small  BA_Cat  BA_Cat_Small  FP_Cat  FP_Cat_Small  \\\n",
+       "playerID  yearID                                                              \n",
+       "abbotje01 1998             Poor    Fair          Good    Fair          Good   \n",
+       "          2000             Poor    Good     Excellent    Good          Good   \n",
+       "abbotku01 1994             Poor    Poor          Good    Fair          Good   \n",
+       "          1995             Good    Fair          Good    Fair          Good   \n",
+       "          1996             Poor    Fair          Good    Fair          Good   \n",
        "\n",
-       "                 BA_Cat_Small FP_Cat FP_Cat_Small Salary_Increase  \\\n",
-       "playerID  yearID                                                    \n",
-       "abbotje01 1998           Good   Fair         Good            Good   \n",
-       "          2000      Excellent   Good         Good            Fair   \n",
-       "abbotku01 1994           Good   Fair         Good            Fair   \n",
-       "          1995           Good   Fair         Good       Excellent   \n",
-       "          1996           Good   Fair         Good       Excellent   \n",
+       "                 Salary_Increase Salary_Increase_Small HighestSalary  \\\n",
+       "playerID  yearID                                                       \n",
+       "abbotje01 1998              Good                 Small        255000   \n",
+       "          2000              Fair                 Small        255000   \n",
+       "abbotku01 1994              Fair                 Small        900000   \n",
+       "          1995         Excellent                 Large        900000   \n",
+       "          1996         Excellent                 Large        900000   \n",
        "\n",
-       "                 Salary_Increase_Small  \n",
-       "playerID  yearID                        \n",
-       "abbotje01 1998                   Small  \n",
-       "          2000                   Small  \n",
-       "abbotku01 1994                   Small  \n",
-       "          1995                   Large  \n",
-       "          1996                   Large  \n",
+       "                 MaxSalary LowestSalary  \n",
+       "playerID  yearID                         \n",
+       "abbotje01 1998      255000       175000  \n",
+       "          2000      255000       175000  \n",
+       "abbotku01 1994      900000       109000  \n",
+       "          1995      900000       109000  \n",
+       "          1996      900000       109000  \n",
        "\n",
-       "[5 rows x 25 columns]"
+       "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1568,6 +1568,9 @@
     "updated['Salary_Increase_Small'] = p.cut(updated['Difference'], bins=[-1.0, 1, 15], labels=[\"Small\", \"Large\"], precision=3)\n",
     "display_stats(updated, 'Difference', 0.001)\n",
     "diff_axes = updated[ updated['G'] >= 50 ].boxplot(column=['Difference'], return_type='axes')\n",
+    "\n",
+    "updated['HighestSalary'] = updated.groupby(['playerID'])['salary'].transform('max')\n",
+    "updated['LowestSalary'] = updated.groupby(['playerID'])['salary'].transform('min')\n",
     "\n",
     "updated.head(5)"
    ]
