Check with salary dipper

--- a/salary/SalaryAnalysis.ipynb
+++ b/salary/SalaryAnalysis.ipynb
@@ -671,7 +671,7 @@
     "\n",
     "print('Probabilities with fewer Categories \\n')\n",
     "probabilities_small = {}\n",
-    "probabilities_small['HR'] = get_prior(dataset, ['Salary_Increase_Small', 'HR_Cat_Small'])\n",
+    "probabilities_small['HR'] = get_prior(dataset, ['Salary_Increase_Small', 'HR_Cat_Small', 'RBI_Cat_Small'])\n",
     "probabilities_small['RBI'] = get_prior(dataset, ['Salary_Increase_Small', 'RBI_Cat_Small'])\n",
     "probabilities_small['Batting_Average'] = get_prior(dataset, ['Salary_Increase_Small', 'BA_Cat_Small'])\n",
     "probabilities_small['Fielding_Percentage'] = get_prior(dataset, ['Salary_Increase_Small', 'FP_Cat_Small'])\n",
