Final code commit

--- a/salary/SalaryAnalysis.ipynb
+++ b/salary/SalaryAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "121410d8-ec1b-4892-982e-638cdd7962b0",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "f8db7187-00d7-474a-8601-7ca7b7640228",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "c4c1c742-bd26-449e-bf60-ad843a2868f5",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "4b8c0937-ffb8-44b2-98b9-601afc7a227b",
    "metadata": {},
    "outputs": [],
@@ -124,10 +124,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "id": "3eae012d-7696-4b97-ada6-f1318c9d7b45",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2885\n"
+     ]
+    }
+   ],
    "source": [
     "df_playerids = pysqldf(\"SELECT DISTINCT playerID from df_people group by playerID\")\n",
     "df_playerids.head(5)\n",
@@ -181,12 +189,13 @@
     "dataset.columns = dataset.columns.droplevel(1)\n",
     "\n",
     "dataset = dataset[dataset['G'] > 50]\n",
-    "dataset = dataset[dataset['AB'] > 500]"
+    "dataset = dataset[dataset['AB'] > 500]\n",
+    "print(len(dataset))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 24,
    "id": "01bab91b-a0a8-4989-a720-3105065f16f7",
    "metadata": {},
    "outputs": [
@@ -235,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "id": "ad2d2b61-512e-412b-b0f0-35a103f1038b",
    "metadata": {},
    "outputs": [
@@ -268,7 +277,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -294,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 26,
    "id": "1a56328d-a2c1-49e5-a2c2-d35f1f5246b0",
    "metadata": {},
    "outputs": [
@@ -343,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 27,
    "id": "dc4d0a06-0a28-4ed6-a6fe-42fea740a0f7",
    "metadata": {},
    "outputs": [
@@ -376,7 +385,7 @@
        "(0.9, 1.0)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -403,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 28,
    "id": "7845cd31-cd43-4157-84b1-793215611987",
    "metadata": {},
    "outputs": [
@@ -455,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 29,
    "id": "2d3cd9c5-1e05-463a-b66c-bfa964aef5bd",
    "metadata": {},
    "outputs": [
@@ -671,7 +680,7 @@
     "\n",
     "print('Probabilities with fewer Categories \\n')\n",
     "probabilities_small = {}\n",
-    "probabilities_small['HR'] = get_prior(dataset, ['Salary_Increase_Small', 'HR_Cat_Small', 'RBI_Cat_Small'])\n",
+    "probabilities_small['HR'] = get_prior(dataset, ['Salary_Increase_Small', 'HR_Cat_Small'])\n",
     "probabilities_small['RBI'] = get_prior(dataset, ['Salary_Increase_Small', 'RBI_Cat_Small'])\n",
     "probabilities_small['Batting_Average'] = get_prior(dataset, ['Salary_Increase_Small', 'BA_Cat_Small'])\n",
     "probabilities_small['Fielding_Percentage'] = get_prior(dataset, ['Salary_Increase_Small', 'FP_Cat_Small'])\n",
@@ -680,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 34,
    "id": "a71e1965-16e8-45c2-afa1-b75fccb44546",
    "metadata": {},
    "outputs": [
@@ -688,14 +697,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "658\n",
       "Probability with small (RBI) 0.0364741641337386\n",
       "Probability with small (HR) 0.07598784194528875\n",
       "Probability with small (Batting Average) 0.13829787234042554\n",
       "Probability with small (Fielding Percentage) 0.08206686930091185\n",
-      "Probability (RBI) 0.11398176291793313\n",
-      "Probability (HR) 0.18693009118541035\n",
-      "Probability (Batting Average) 0.2750759878419453\n",
-      "Probability (Fielding Percentage) 0.19148936170212766\n"
+      "Probability (RBI) 0.0\n",
+      "Probability (HR) 0.0\n",
+      "Probability (Batting Average) 0.0\n",
+      "Probability (Fielding Percentage) 0.001519756838905775\n"
      ]
     }
    ],
@@ -750,6 +760,7 @@
     "\n",
     "# dataset.head(5)\n",
     "tuples = check_salary_dip(dataset.sort_values(by=['playerID', 'yearID']), 1, 800)\n",
+    "print(len(tuples))\n",
     "rbi_prob_small = check_probabilities(tuples, 'RBI_Cat_Small', small_rating, -1)\n",
     "hr_prob_small = check_probabilities(tuples, 'HR_Cat_Small', small_rating, -1)\n",
     "ba_prob_small = check_probabilities(tuples, 'BA_Cat_Small', small_rating, -1)\n",
@@ -760,10 +771,10 @@
     "print('Probability with small (Batting Average)', ba_prob_small)\n",
     "print('Probability with small (Fielding Percentage)', fp_prob_small)\n",
     "\n",
-    "rbi_prob = check_probabilities(tuples, 'RBI_Cat', regular_rating, -1)\n",
-    "hr_prob = check_probabilities(tuples, 'HR_Cat', regular_rating, -1)\n",
-    "ba_prob = check_probabilities(tuples, 'BA_Cat', regular_rating, -1)\n",
-    "fp_prob = check_probabilities(tuples, 'FP_Cat', regular_rating, -1)\n",
+    "rbi_prob = check_probabilities(tuples, 'RBI_Cat', regular_rating, -3)\n",
+    "hr_prob = check_probabilities(tuples, 'HR_Cat', regular_rating, -3)\n",
+    "ba_prob = check_probabilities(tuples, 'BA_Cat', regular_rating, -4)\n",
+    "fp_prob = check_probabilities(tuples, 'FP_Cat', regular_rating, -3)\n",
     "\n",
     "print('Probability (RBI)', rbi_prob)\n",
     "print('Probability (HR)', hr_prob)\n",
