Final final salary commit

--- a/salary/SalaryAnalysis.ipynb
+++ b/salary/SalaryAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "121410d8-ec1b-4892-982e-638cdd7962b0",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "f8db7187-00d7-474a-8601-7ca7b7640228",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "c4c1c742-bd26-449e-bf60-ad843a2868f5",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "4b8c0937-ffb8-44b2-98b9-601afc7a227b",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "3eae012d-7696-4b97-ada6-f1318c9d7b45",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "01bab91b-a0a8-4989-a720-3105065f16f7",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "ad2d2b61-512e-412b-b0f0-35a103f1038b",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "1a56328d-a2c1-49e5-a2c2-d35f1f5246b0",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "dc4d0a06-0a28-4ed6-a6fe-42fea740a0f7",
    "metadata": {},
    "outputs": [
@@ -385,7 +385,7 @@
        "(0.9, 1.0)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "7845cd31-cd43-4157-84b1-793215611987",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "2d3cd9c5-1e05-463a-b66c-bfa964aef5bd",
    "metadata": {},
    "outputs": [
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "id": "a71e1965-16e8-45c2-afa1-b75fccb44546",
    "metadata": {},
    "outputs": [
@@ -702,10 +702,10 @@
       "Probability with small (HR) 0.07598784194528875\n",
       "Probability with small (Batting Average) 0.13829787234042554\n",
       "Probability with small (Fielding Percentage) 0.08206686930091185\n",
-      "Probability (RBI) 0.0\n",
-      "Probability (HR) 0.0\n",
-      "Probability (Batting Average) 0.0\n",
-      "Probability (Fielding Percentage) 0.001519756838905775\n"
+      "Probability (RBI) 0.11398176291793313\n",
+      "Probability (HR) 0.18693009118541035\n",
+      "Probability (Batting Average) 0.2750759878419453\n",
+      "Probability (Fielding Percentage) 0.19148936170212766\n"
      ]
     }
    ],
@@ -771,10 +771,10 @@
     "print('Probability with small (Batting Average)', ba_prob_small)\n",
     "print('Probability with small (Fielding Percentage)', fp_prob_small)\n",
     "\n",
-    "rbi_prob = check_probabilities(tuples, 'RBI_Cat', regular_rating, -3)\n",
-    "hr_prob = check_probabilities(tuples, 'HR_Cat', regular_rating, -3)\n",
-    "ba_prob = check_probabilities(tuples, 'BA_Cat', regular_rating, -4)\n",
-    "fp_prob = check_probabilities(tuples, 'FP_Cat', regular_rating, -3)\n",
+    "rbi_prob = check_probabilities(tuples, 'RBI_Cat', regular_rating, -1)\n",
+    "hr_prob = check_probabilities(tuples, 'HR_Cat', regular_rating, -1)\n",
+    "ba_prob = check_probabilities(tuples, 'BA_Cat', regular_rating, -1)\n",
+    "fp_prob = check_probabilities(tuples, 'FP_Cat', regular_rating, -1)\n",
     "\n",
     "print('Probability (RBI)', rbi_prob)\n",
     "print('Probability (HR)', hr_prob)\n",
